# 123pan

./: .gitignore  .pylintrc  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: build.yaml  check.yml  release.yml  test.yaml
doc/: api.md  todo.md
script/: build.ps1  build.sh  lint.ps1  lint.sh  mypy.ps1
src/: 123pan-open.py  123pan.py  api.py  main_window.py  ui_widgets.py
src/app/api/: model.py  session.py
src/app/common/: api.py  concurrency.py  config.py  const.py  credential.py  database.py  download_resume.py  log.py  resource.py  speed_limiter.py  speed_tracker.py  style_sheet.py
src/app/dialog/: __init__.py  rename_dialog.py
src/app/resource/: resource.qrc
src/app/view/: cloud_interface.py  file_interface.py  login_window.py  main_window.py  move_window.py  qr_login_page.py  rename_window.py  search_window.py  setting_interface.py  transfer_interface.py
tests/: test_concurrency.py  test_config.py  test_download_resume.py  test_file_interface.py  test_login_flow.py  test_main_window.py  test_pan_api.py  test_retry.py  test_search_window.py  test_setting_interface.py  test_transfer_interface.py
